<resources>
    <string name="app_name">CafeOrderApp</string>
    <string name="password_hint">Sandi</string>
    <string name="name_hint">Nama</string>
    <string name="order_button">LOGIN</string>
    <string name="other_button">LAINNYA</string>
    <string name="string_default_name">Pengguna</string>
    <string name="string_default_password">Sandi</string>
    <string name="logo_description">Logo Cafe</string>
    <string name="toast_login_button">Semua data wajib diisi</string>
    <string name="hello_client">Halo, kopi atau teh?</string>
    <string name="tea">Teh</string>
    <string name="coffee">Kopi</string>
    <string name="toppings">Toping:</string>
    <string name="milk">Susu</string>
    <string name="sugar">Gula</string>
    <string name="lemon">Lemon</string>
    <string name="choose_drink">Pilih minumannya:</string>
    <string name="order">Pesan:</string>
    <string name="button_send_description">Kirim pesanan</string>
    <string-array name="types_of_coffee">
        <item>Americano</item>
        <item>Espreso</item>
        <item>Latte</item>
    </string-array>
    <string-array name="types_of_tea">
        <item>Teh Hijau</item>
        <item>Teh Hitam</item>
        <item>Teh Merah</item>
    </string-array>
</resources>